# emotion-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/plans/: emotion_detector_sdk_6b79879e.plan.md
examples/: basic_usage.py  batch_processing.py  realtime_multimodal.py  realtime_webcam.py  robot_handlers.py
src/emotion_detection_action/: __init__.py
src/emotion_detection_action/actions/: __init__.py  base.py  http_handler.py  logging_handler.py  ros_handler.py  serial_handler.py
src/emotion_detection_action/core/: __init__.py  config.py  detector.py  types.py
src/emotion_detection_action/detection/: __init__.py  attention.py  face.py  voice.py
src/emotion_detection_action/emotion/: __init__.py  attention.py  facial.py  fusion.py  smoothing.py  speech.py
src/emotion_detection_action/inputs/: __init__.py  audio.py  base.py  image.py  video.py
src/emotion_detector/: __init__.py
src/emotion_detector/actions/: __init__.py  base.py  logging_handler.py
src/emotion_detector/core/: __init__.py  config.py  detector.py
src/emotion_detector/detection/: __init__.py  face.py  voice.py
src/emotion_detector/emotion/: __init__.py  facial.py  fusion.py  speech.py
src/emotion_detector/inputs/: __init__.py  audio.py  image.py  video.py
tests/: __init__.py  conftest.py
tests/test_actions/: __init__.py  test_handlers.py
tests/test_core/: test_config.py  test_types.py
tests/test_detection/: __init__.py  test_attention.py  test_face.py
tests/test_emotion/: __init__.py  test_attention.py  test_fusion.py  test_smoothing.py
tests/test_inputs/: __init__.py  test_handlers.py
tests/test_integration/: __init__.py  test_pipeline.py
tests/test_models/: __init__.py  test_registry.py
